Pushed from Domino: /u/wadkars/ML_STREAMING_ONLINE_LEARNING/runs/61284aa58a7ba050e52bf165

--- a/src/1_Process_X_Data.ipynb
+++ b/src/1_Process_X_Data.ipynb
@@ -6411,7 +6411,439 @@
       "refreshing model\n",
       "Current Model Version 103\n",
       "refreshing model\n",
-      "Current Model Version 103\n"
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "35500\n",
+      "{'x': {'v0': 0.8967263063377249, 'v1': -1.0739554106639722}, 'y_hat': False, 'uuid': 'e52be400aa07490894f4664a44e14ca6', 'uid': '7551', 'y_real': False}\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 103\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 104\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 105\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 106\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 107\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "37100\n",
+      "{'x': {'v0': -0.6056414696971582, 'v1': 0.26232451966393955}, 'y_hat': False, 'uuid': '248d48d55c4a4b47a9a39d19e784d684', 'uid': '2823', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 108\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "37500\n",
+      "{'x': {'v0': -1.32972992737797, 'v1': 0.8222585261781163}, 'y_hat': False, 'uuid': 'c2f70c44624f48b28205ee27b07ae1d4', 'uid': '3425', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 109\n",
+      "refreshing model\n",
+      "Current Model Version 110\n",
+      "refreshing model\n",
+      "Current Model Version 110\n",
+      "refreshing model\n",
+      "Current Model Version 110\n",
+      "refreshing model\n",
+      "Current Model Version 110\n",
+      "refreshing model\n",
+      "Current Model Version 110\n"
      ]
     }
    ],
