--- a/src/3_Create_New_Model_Version.ipynb
+++ b/src/3_Create_New_Model_Version.ipynb
@@ -6928,7 +6928,475 @@
       "True-False\n",
       "True-False\n",
       "0.5970325011775789\n",
-      "0.20697784064120697\n"
+      "0.20697784064120697\n",
+      "Deleting files #32\n",
+      "c8ebdcc4539b4b8e94c702e965fb184c\n",
+      "ae75b3185f494f07a2d8094b5461667f\n",
+      "9abf5d6b552a4e8d8145e802066e3158\n",
+      "dd5706dcb6bd4c71bdb4f908194d1e5f\n",
+      "244015c499244e0a970c6106eebb4988\n",
+      "5e3d3f90180b44c4907bcbeb8e49b6f1\n",
+      "487a9f800c0f4751b2346c293ad63544\n",
+      "da906eadad274cfdbccdba7eb915f6d9\n",
+      "2f110f8426bc42b1b7dbc2bef2c39d6d\n",
+      "a164808e5f9d41028284bd8e33f2b944\n",
+      "fa5acf45cd884e56acdf85a5ec1df24b\n",
+      "1a7eb46215d948c6bd83ec4c8c21f94a\n",
+      "220393453dc54197b76fbf397fdb672c\n",
+      "51b307bb9e6e492680174355711c441d\n",
+      "724fbc2d6cc140af8bcffb0a47835c98\n",
+      "e52be400aa07490894f4664a44e14ca6\n",
+      "5c50000d86ed4dbfa50d7caa345e2440\n",
+      "76b4cec6a68a453cb5148085b214f76e\n",
+      "a8e76d751b8046e790ebd7ab0c5c14fe\n",
+      "21731b734863496ab85364a8e014c7e4\n",
+      "6877719bd2ae4e929ca6bc737e24c250\n",
+      "44d33e7c14c441bdb7ed7d2685d18f79\n",
+      "dea40ffc16ec4d3c8d71511c08ec6b94\n",
+      "1803040085b543da8e60da8ffd5273b0\n",
+      "646d4c09cb154c58acb1f70c5432afbb\n",
+      "9bac282eb292476f93b850608f25b28c\n",
+      "be33e64471e546738acb63025a6bba65\n",
+      "510a0e42dc874ec389801d1ec6aad346\n",
+      "1bae7f8e1acb4b48bc25bb312e1a6f73\n",
+      "128e5e8f4a7c45b6b1ef5b16502fa8cb\n",
+      "2e847b4837fd40ebb5ae444fac0f3750\n",
+      "b397381b76174c04b6a15aa93a0c6849\n",
+      "104\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "0.5972417017297803\n",
+      "0.2058134083450539\n",
+      "Deleting files #31\n",
+      "08dbc91f744e4564a1ce758f3a430d49\n",
+      "72d74d8192b84f9ba0d0e20788097402\n",
+      "6000c3f663db4a1c8ba4a9c5f50ecd88\n",
+      "5d20ac914c1544aaa33cc6c7a9df49ee\n",
+      "85cedf66a75546b5ba3eed8ddbd0b7b1\n",
+      "c30b05cb398f40008538c052da4121e0\n",
+      "2f837f9b08cd43d889f442a41a827572\n",
+      "9cdae3583f4f40c7bfdee5b5608da0d4\n",
+      "0a8d30ac5644422ea8f0cf853e1b6dea\n",
+      "4359067e2047428a854e1bf730c7e78b\n",
+      "fe07263656ab430bbe36a62bdaf7f18f\n",
+      "8b3fd74a61ed4a15b7980b9b3e130182\n",
+      "2010aaa5200f4c138e0be83c5dccef6b\n",
+      "22e4741490b941cbb2dc47202f294a6a\n",
+      "5983d393044c4e99a61f2f171c927c27\n",
+      "06fc403e7aaa421ba730832b114560ed\n",
+      "3ad084ad3869403a851f0250118db62d\n",
+      "7aeacfc0f2774566951616230057a14b\n",
+      "f4524853de92452ca86ed02343e27c59\n",
+      "584c61f742b942a6b2ce6dd4b5afc20c\n",
+      "9c6ddc83a6004ef38029690b093ecfa6\n",
+      "5fcc05b41a4e4a53baf15177f4a92e81\n",
+      "f30cd3e718374e65bf12e58e972003fc\n",
+      "2060fbee9d8d4543880ca311f73d8680\n",
+      "416f47ca087f451db1b41b7b8edf50d6\n",
+      "560aa3c234d64a5489fa67621dea8706\n",
+      "690f138fd7b54764bad2136d002ee99f\n",
+      "f0fdefaa3b7d4bffb103b81a8dc24393\n",
+      "8db5c1ba7e964f0faefd16765e4a48b5\n",
+      "5f18302bb8f94ca7b2768d70f6da9afc\n",
+      "ca2dda54422741b8b299008530f673c2\n",
+      "105\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "0.5971223021582733\n",
+      "0.20456663560111835\n",
+      "Deleting files #31\n",
+      "3fd3a6b32e804996a62f7ea796275c33\n",
+      "4e7a96cf6e004c30b6d9260604872de1\n",
+      "c48a7c2b8b7447df882d6762dc670782\n",
+      "b42723bd9c1f4787af52d4feebdab549\n",
+      "a22c1db305ae4ccba67e7670d2d5c1e0\n",
+      "a5cc5db9e5d540e4bfed211e57c84a9e\n",
+      "219077c7472d4d329797d46f52b8f12d\n",
+      "7489955a189847c0829b683c8e27f869\n",
+      "093e88425e5842a79a133b2d643954e3\n",
+      "980e56ed7c854f18a20750e8b7c69da2\n",
+      "8271495676044fe5aefae604d8afae60\n",
+      "bd0c95a906464427b3c4c13fcf6d2b4d\n",
+      "198767ae0d814b6c89096cfb6a845663\n",
+      "02242fea3a694d34ba3f600ec53bfb1a\n",
+      "655649973c584e269e57236e98b94538\n",
+      "36bc896ae5f24f7e95fcc574ebea9ab0\n",
+      "3e3c6eee889a417087001260b15d06f8\n",
+      "b95419ce900c4eafb1d59436294ca76e\n",
+      "6b1d2fdfa61446c39a0b488a7063f60a\n",
+      "7a821842d52647369438163f3700d913\n",
+      "4192e2ea2f9241cb8f7e03235c18d497\n",
+      "944a270dd3ce420dac4d5cfb98f87a55\n",
+      "8f6e8a7f4860403aab1ace57212a9b4f\n",
+      "12ed4a88816b4bf7860e24ab8a8cb4f2\n",
+      "dbc6f272cb2645e4b78a61185edee3c4\n",
+      "1d8b1d5cb4c24d4695839ddfb7e5d41f\n",
+      "4e39d4c3a78f4352ae6bf6d2488c6a55\n",
+      "4fe90af6908741feb11029f1084bbfa5\n",
+      "bb111f7c5d4d4565b1591102e5b3e54a\n",
+      "ab767d9d742c446eab5a8e125a7d130f\n",
+      "136c96620d4b488cb256fcc108bc9a3d\n",
+      "106\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "0.5967741935483871\n",
+      "0.20324074074074075\n",
+      "Deleting files #31\n",
+      "7ceaf896eb6140b5a8ba810d2f49c018\n",
+      "081e85f8b472432396bc527af73121a8\n",
+      "af73b0dc5b894ddcb5d4f1b0dbdf4d7d\n",
+      "d1a886ff4c0d41be92874d76b28a04ba\n",
+      "7ca8bf830b1f4f6e8517ba6b415e4f1d\n",
+      "ffcdfef2399141478153b704ef74b781\n",
+      "715be6c1b7734c1e8cd85c9067894927\n",
+      "5f2d1d3fb9394a37bc0a516b0859fa31\n",
+      "4fcd3b89e25c4f93a5931b8b9763937c\n",
+      "8844c5cdbe5f46bd8c8b2d8eaf0c346b\n",
+      "344b31f7722e4f3d9c0cadc8e574a9c6\n",
+      "3da0dcb5dca2444c9b3aa52d4a7271ea\n",
+      "7950f20e2ac54ab5b6d40e347c529f45\n",
+      "bd1fd45d041f471883004c5ae74970b2\n",
+      "37476291f37f488c89479be933b209d9\n",
+      "a40d0ca3eab54553b6b383bac264fcc5\n",
+      "b9d468be059848e1ad7f3d4c2d674e09\n",
+      "611ee35473f64930a128c556d8315f25\n",
+      "be301f7f38044d0999c75301a29069d3\n",
+      "799bd5fad2ad40e5b8651d1da4e0047e\n",
+      "0aaf529c468e4c71b2d1bcbf7f3a673e\n",
+      "03cb04d472b84ad1a9fc819b8c330fca\n",
+      "265a155241474765a252e75eb90b776a\n",
+      "2dca133f6bdc420194ab3477473ef6d6\n",
+      "27ba0309335d49c79626314b338aadce\n",
+      "842fc9dc01cc4d1e993a4d3ff80af55e\n",
+      "fbb19787209f4a4aa5b1bae909d94bd8\n",
+      "34759202887b47d0bef11e9efd2e3fba\n",
+      "0a5d4fda61724ead99f892effcd0c4b4\n",
+      "f3d88b9ee05c41048eb028904dcb0f07\n",
+      "5e75ba069fc9476484e1e629a79f1e6e\n",
+      "107\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "0.5955159002516587\n",
+      "0.20156106519742883\n",
+      "Deleting files #33\n",
+      "5472e380095c45d18b3d51fde940e10f\n",
+      "d1434f8d762d424bb03ef58099afcd46\n",
+      "011c65d03d104c11a918f0dd34f92d0b\n",
+      "d0d7e6cb32c44b68b7eef872ac2a20a1\n",
+      "478216b63a5b4753aa80f82c04686d45\n",
+      "4884d04859914171ab78f3c3d9e54f9d\n",
+      "97e9e9044510423ea1e3cbd17ee8a97f\n",
+      "45fe1688d34e4684b498967500980c03\n",
+      "dadba6c12a25467e98e2dc5cea0c75a7\n",
+      "3ab118f6e9504d91bbf15cce0e8e113c\n",
+      "187908da98a344e9a8886aa95c1a22e8\n",
+      "dc7b0fda10f84c048785165b3d97b57b\n",
+      "2db8853ddb244ff6b01b89e3849b485b\n",
+      "3d0d08dab31a4f26893940bcd02026de\n",
+      "cb8c615228bf446eafa9959097b1fca6\n",
+      "3cc26ef0ebda4cfa89ab50b05dbeaccf\n",
+      "edf339dc9ec54c37bda5809a6254852d\n",
+      "255ddccfbe8e4e2abe6901b26e25b474\n",
+      "41a33d7d77c34461861d8bc2e725233f\n",
+      "059b69c0f95141f18f3f2302141c59cf\n",
+      "5cec8aa014d64995bdd64b348e710b7b\n",
+      "1a4a277316644062a1e11539e54957cb\n",
+      "b863a620d91e47edb5c3bccccbf142bf\n",
+      "e3b9cd8aecff4537ae81cbf1c04727c6\n",
+      "ea81aa4fd0b041559f2ca40b0fdc0c28\n",
+      "b75e302b4261485e957a0debd6483bff\n",
+      "cc4c280f21a845ce9afd98dd4f02fe87\n",
+      "61dbe94c5ee9466c90c692132ed5f474\n",
+      "3c3f5221b00d40399df9bf145158eee1\n",
+      "ed17d722e90d4df58f4f839e7bebfb45\n",
+      "42bdff265d734f8d8a2e6325c8c1ddaf\n",
+      "48c7008d5ccd4638ba9e4db884e92a8a\n",
+      "721753e029b343f7bfc7ebcdd5f0cbfc\n",
+      "108\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "0.594913714804723\n",
+      "0.2000911577028259\n",
+      "Deleting files #31\n",
+      "8b34227409e44bec9d32ff5ded8f6255\n",
+      "23f861339b824d049f15c82a3fdeb32c\n",
+      "89b7d3bd0f7c4eda8d1f31ff4f73a623\n",
+      "e577c33476264bb8bab1c6efb3bd5d88\n",
+      "248d48d55c4a4b47a9a39d19e784d684\n",
+      "e92f3837e34a4b02ac080e9b5b2a06ce\n",
+      "5c2995326a9f4681ace6b117d7a70888\n",
+      "4bc1cbcf6c804b968656cc3df1d99218\n",
+      "06cbcad50df94be9bd8b102ec84aff5d\n",
+      "9166c35a7aae407d8d1f9aee6bfb01fe\n",
+      "7b7f990d60a040b6a723cf8cc1b56575\n",
+      "f131ff7b137c4ddc9b43f25967b8aaf6\n",
+      "6d0049c6245a460ea7f3d98793fc08fc\n",
+      "fbd3895c3e384124bac28917cb0f73d1\n",
+      "b850af418a5449b1b40ac4ec7ae94219\n",
+      "698ab1fd13724c489e18cce903d2b37d\n",
+      "310c32610149449ba0a15f8677dcec7a\n",
+      "e8ee20ae482f488d9c9e2ff395ba05c6\n",
+      "d70e4952635a463abcaeb1f3bcb7a077\n",
+      "e8a0fcedb35c49fe93cce9729d0cb401\n",
+      "e945cf1b5a634f27ab52809776bee481\n",
+      "8b327cd0cd594f8095a61ab04b3ee7f0\n",
+      "592fde5bf5934f779160c16d6e3f7320\n",
+      "49c8113c85bc4ffc900369755aa7a233\n",
+      "3ada2f717649461e89b28b082f1d66bf\n",
+      "dc96c23e877343b686ae70f207cf3c43\n",
+      "78dd99593d4141159a689adc2479ec60\n",
+      "b67e4dc5f58748ce9a396a1452d903e7\n",
+      "9f61e897310e4bacaef19b11b49df068\n",
+      "6db9df4e4b514c40a499202e6e274dd8\n",
+      "b6db7bbbe51a47278724b9dea1d1c87b\n",
+      "109\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "0.5941375422773394\n",
+      "0.19864253393665157\n",
+      "Deleting files #31\n",
+      "9de3ec20ac5c4002b14e98e6f21270ad\n",
+      "8b1534190d3a4ad8bdcee112d82ca4de\n",
+      "f04ac38e90784b028dc2ed113f518fcf\n",
+      "d0ebf83cd0e94dac9a1e1a8cd6157d29\n",
+      "71c8c3bac09047b08cffcd21d4b54e51\n",
+      "8aaf8ae71b5b48d080d69c6ac76b8a14\n",
+      "17f080dc47404bea8a43306bca7f32b9\n",
+      "2351bf50daa74fd086bb7c0a9d426928\n",
+      "7fb2c1d913c94e62b8be06fef66c72e4\n",
+      "d7a054cde43544a3a4c4ed524b12e108\n",
+      "42aa15e4aa0a44a18d07aa6d25700180\n",
+      "6d5aff6922814534bde6e427ce7aa055\n",
+      "ef1ade6d14884de5ac720d6b74a1d382\n",
+      "b7a296e053df4412ba0f3a8b3a7f8013\n",
+      "1fb80527b70a4806925b35e0c2a31fc4\n",
+      "607e0bbca530430fba407f6b9781d8a0\n",
+      "173aa70ad38148ef998a44d42258f694\n",
+      "3dbf87842e394345b19c9172b030063d\n",
+      "061c1584b60141459ea495ba2199d7e5\n",
+      "c2f70c44624f48b28205ee27b07ae1d4\n",
+      "7b0ef15edff945eab862946815d5acae\n",
+      "fcbd7e32808844ce9e6312f19a2bb4a5\n",
+      "2dcc477975e54d72a7e071d50d865790\n",
+      "7af50b4ea09f452da1a56347add99fcf\n",
+      "dbdc51fcde6649df93f406ef82d935f7\n",
+      "7339c8cf565546e4a3feff2aa0098c06\n",
+      "9e7589e9b5ef400a925d6025e2fecf87\n",
+      "63de5e1a45c44eb5926bd0549adc6101\n",
+      "ffc7791e3f654f16b9bbb9fd5a224ca8\n",
+      "85d49175b07f40be88f5b959d0e782ff\n",
+      "7062e6b4040a43fa8a56b62da4746310\n",
+      "110\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "0.5942678011643528\n",
+      "0.19756975697569756\n"
      ]
     }
    ],
